// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PruClickableIcon should render correctly 1`] = `
.c0 img {
  cursor: pointer;
  opacity: 1;
}

.c0 img:hover {
  opacity: 0.6;
}

<div>
  <div
    alt="air-plane"
    class="c0"
    type="air-plane"
  >
    <img
      alt="air-plane"
      src="own-airplane.svg"
    />
  </div>
  <div />
</div>
`;

exports[`PruClickableIcon should render correctly when disabled 1`] = `
.c0 img {
  cursor: unset;
  opacity: 0.6;
}

.c0 img:hover {
  opacity: 0.6;
}

<div>
  <div
    alt="air-plane"
    class="c0"
    type="air-plane"
  >
    <img
      alt="air-plane"
      src="own-airplane.svg"
    />
  </div>
  <div />
</div>
`;
